Add getToken utility file

--- a/package.json
+++ b/package.json
@@ -11,16 +11,17 @@
   "dependencies": {
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.5.1"
   },
   "keywords": [
-  "premium",
-  "totes",
-  "sophistication",
-  "style",
-  "high-quality",
-  "luxury",
-  "craftsmanship",
-  "exclusive"
-]
+    "premium",
+    "totes",
+    "sophistication",
+    "style",
+    "high-quality",
+    "luxury",
+    "craftsmanship",
+    "exclusive"
+  ]
 }
